changing obstacle image

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Catch&Hit(Game)</title>
+    <title>Happy Bee</title>
     <meta name="description" content="Collect weapons and when the players touch horizontally or vertically the fight start.">
 
     <!-- FavIcon -->
-    <link rel="icon" href="./img/weapons/linghtning.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="./img/honeybee.png" type="image/png" sizes="16x16">
     
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
