--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
 
         </div>
     </div>
-
+    <div id="graphics-credit" >
+        <a href="https://www.freepik.com/" target="_blank">graphics created by freepik - www.freepik.com</a>
+    </div>
     <!-- fighting Modal -->
     <div id="FightingModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
