--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>Happy Bee</title>
-    <meta name="description" content="Collect weapons and when the players touch horizontally or vertically the fight start.">
+    <meta name="description" content="Collect nectar and when the players touch horizontally or vertically the fight start.">
 
     <!-- FavIcon -->
     <link rel="icon" href="./img/honeybee.png" type="image/png" sizes="16x16">
@@ -38,13 +38,13 @@
                     disabled="true">Attack</button>
                 <button id="playerOne-defend" type="button" class="btn btn-primary btn-block disabled my-3 mx-auto"
                     disabled="true">Defend</button>
-                <div class="weapon-panel py-3">
-                    <h4>Weapon</h4>
+                <div class="nectar-panel py-3">
+                    <h4>Nectar</h4>
                     <div id="playerOne-weapon">
                     </div>
                     <div class="lead">
                         <div>
-                            Damage Power
+                            Quantity
                         </div>
                         <div id="playerOne-damagePower" class="lead">
                             10
@@ -78,13 +78,13 @@
                     disabled>Attack</button>
                 <button id="playerTwo-defend" type="button" class="btn btn-primary btn-block disabled my-3 mx-auto"
                     disabled>Defend</button>
-                <div class="weapon-panel py-3">
-                    <h4>Weapon</h4>
+                <div class="nectar-panel py-3">
+                    <h4>Nectar</h4>
                     <div id="playerTwo-weapon">
                     </div>
                     <div class="lead">
                         <div>
-                            Damage Power
+                            Quantity
                         </div>
                         <div id="playerTwo-damagePower" class="lead">
                             10
