home page buttons

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Science and Educational Games">
 
     <!-- FavIcon -->
-    <link rel="icon" href="./img/honeybee.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="./img/icon.png" type="image/png" sizes="16x16">
     
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -18,7 +18,21 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div id="graphics-credit" >
+    <div class="my-3" id="banner">
+        <img src="./img/banner.png" alt="Science Games Banner">
+    </div>
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6 text-center">
+                <img src="./img/play.jpg" alt="Science Games Banner">
+            </div>
+            <div class="col-12 col-md-6 text-center">
+                <img src="./img/gallery.jpg" alt="Science Games Banner">
+            </div>
+        </div>
+    </div>
+    <div class="mt-5" id="graphics-credit" >
         <a href="https://www.freepik.com/" target="_blank">graphics created by freepik - www.freepik.com</a>
     </div>
 </body>
