--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-6 text-center">
-                <img src="./img/play.jpg" alt="Science Games Banner">
+                <a href="./HappyBee/">
+                    <img src="./img/play.jpg" alt="Science Games Banner">
+                </a>
             </div>
             <div class="col-12 col-md-6 text-center">
-                <img src="./img/gallery.jpg" alt="Science Games Banner">
+                <a href="">
+                    <img src="./img/gallery.jpg" alt="Science Games Banner">                    
+                </a>
             </div>
         </div>
     </div>
