--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </a>
             </div>
             <div class="col-12 col-md-6 text-center">
-                <a href="">
+                <a href="./Gallery/">
                     <img src="./img/gallery.jpg" alt="Science Games Banner">                    
                 </a>
             </div>
