update gallery icon

--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Science and Educational Games">
 
     <!-- FavIcon -->
-    <link rel="icon" href="./img/icon.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="./img/camera.png" type="image/png">
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/style.css">
