update home screen

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <div class="row">
             <div class="col-12 col-md-6 text-center">
                 <a href="./HappyBee/">
-                    <img src="./img/play.jpg" alt="Science Games Banner">
+                    <img class="imagedropshadow" src="./img/play.jpg" alt="Science Games Banner">
                 </a>
             </div>
             <div class="col-12 col-md-6 text-center">
                 <a href="./Gallery/">
-                    <img src="./img/gallery.jpg" alt="Science Games Banner">                    
+                    <img class="imagedropshadow" src="./img/gallery.jpg" alt="Science Games Banner">                    
                 </a>
             </div>
         </div>
