adding link to source code

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/style.css">
+
+    <!-- Fontawesome icons -->
+    <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
     <div class="my-3" id="banner">
@@ -36,8 +39,15 @@
             </div>
         </div>
     </div>
-    <div class="mt-5" id="graphics-credit" >
-        <a href="https://www.freepik.com/" target="_blank">graphics created by freepik - www.freepik.com</a>
-    </div>
+    <footer class="container">
+        <div class="row d-flex justify-content-between mt-5">
+            <div>
+                <a href="https://www.freepik.com/" target="_blank">graphics created by freepik - www.freepik.com</a>
+            </div>
+            <div>
+                <a href="https://github.com/scigames-club/scigames-club.github.io" target="_blank" class="icon"><i class="fa fa-github"></i> source code</a>            
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
